--- a/app/src/main/res/drawable/btn_background.xml
+++ b/app/src/main/res/drawable/btn_background.xml
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-<corners android:radius="15dp"/>
-    <solid android:color="@color/sky_blue" />
+<?xml version="1.0" encoding="UTF-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient android:startColor="#16B5CC" android:endColor="#10A5BA"/>
+    <corners android:bottomRightRadius="4dp" android:bottomLeftRadius="4dp"
+        android:topLeftRadius="4dp" android:topRightRadius="4dp"/>
 </shape>
