--- a/app/src/main/res/layout/sent.xml
+++ b/app/src/main/res/layout/sent.xml
@@ -5,11 +5,13 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:background="@drawable/btn_background"
+        android:background="@drawable/chatcornersent"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="5dp"
         android:layout_height="wrap_content">
+
 
         <TextView
             android:id="@+id/txt_sent_message"
